resolves TODO, FIXME and FindBugs Warnings