@@ -120,8 +120,8 @@ public class ScanPalletDisplay extends AbstractGridDisplay {
     protected String getTopTextForBox(
         Map<RowColPos, ? extends AbstractUICell> cells, int indexRow,
         int indexCol) {
-        String row = new Character((char) (indexRow + 'A')).toString();
-        String col = new Integer(indexCol + 1).toString();
+        String row = Character.valueOf((char) (indexRow + 'A')).toString();
+        String col = Integer.valueOf(indexCol + 1).toString();
         return row + col;
     }
 
